fixed ItemObjective old "resourceTrebleOccurences" in new generic "itemOccurences"